# lithuanianquiz

./: .env.example  .gitignore  .pre-commit-config.yaml  .railwayignore  AGENTS.md  CLAUDE.md  CLAUDEv0.md  FUTURE_MODULES.md  HANDOFF.md  LITHUANIAN_INTERFACE_REVIEW_REFERENCE.md  PRD.md  TIME_MODULE_SPEC.md  adaptive.py  adaptive_learning_service.py  age_engine.py  auth.py  bug.md  create-database.ipynb  credentials-checker.py  database-testing.ipynb  db_manager.py  failure.md  get_csvs.py  i18n.py  learning-prd.md  lithuanian_data.db  main.py  number_engine.py  numbers.csv  pyproject.toml  quiz.py  reference.txt  reference_sheet.py  requirements.txt  session_manager.py  thompson.py  time_engine.py  time_reference.py  todo.md  ui.py  (+1 more)
.githooks/: pre-commit
.github/workflows/: ci.yml
data/: numbers_2025-03-10.csv  pronouns_2025-03-10.csv
docs/plans/: 2026-03-15-feedback-flow-cleanup-design.md  2026-03-15-feedback-flow-cleanup.md
docs/reviews/: 2026-04-17-thompson-sampling-review-response.md  2026-04-17-thompson-sampling-review-revised.md  2026-04-17-thompson-sampling-review.md  exercise-reference.md  time-reference.md
docs/superpowers/plans/: 2026-04-17-adaptive-scheme-cleanup.md  2026-04-17-numbers-consolidation.md  2026-04-17-polish-head-tags.md  2026-04-17-polish-mobile-audit.md  2026-04-17-polish-review-docs.md
docs/superpowers/specs/: 2026-04-17-numbers-consolidation-design.md  2026-04-17-polish-bucket-design.md
llms/: monsterui-llms-ctx.txt
scripts/: generate_exercise_reference.py  pr-comment.sh
tests/: test_adaptive.py  test_age.py  test_numbers.py  test_quiz.py  test_regressions.py  test_thompson.py  test_time.py  test_ui.py  test_weather.py
