[project]
name = "fast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastlite>=0.1.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "monsterui>=1.0.7",
    "nbclassic>=1.2.0",
    "notebook>=7.3.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "python-fasthtml>=0.12.1",
    "ruff>=0.9.6",
    "seaborn>=0.13.2",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "F405",  # Defined from star imports
    "F403",  # Unable to detect undefined names from star imports
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["fasthtml", "monsterui", "fastlite"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files
