[project]
name = "lithuanianquiz"
version = "0.1.0"
description = "Adaptive Lithuanian price quiz"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.12.1",
    "monsterui>=1.0.7",
    "fastlite>=0.1.1",
    "numpy>=2.2.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9.6", "pre-commit>=4.1.0"]
data = ["pandas>=2.2.3"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
ignore = [
    "E501",
    "F405",
    "F403",
]

[tool.ruff.lint.isort]
known-first-party = ["fasthtml", "monsterui", "fastlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
