[project]
name = "lithuanianquiz"
version = "0.1.0"
description = "Adaptive Lithuanian price quiz"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-fasthtml>=0.13.3",
    "monsterui>=1.0.45",
    "fastlite>=0.2.4",
    "numpy>=2.4.4",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "ruff>=0.15.11", "pre-commit>=4.5.1"]
data = ["pandas>=2.2.3"]

[tool.ruff]
line-length = 88
exclude = [
    "create-database.ipynb",
    "database-testing.ipynb",
    "credentials-checker.py",
    "db_manager.py",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "W",
    "B",
    "UP",
]
ignore = [
    "E501",
    "F405",
    "F403",
]

[tool.ruff.lint.isort]
known-first-party = ["fasthtml", "monsterui", "fastlite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
